--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,7 @@
   "ConnectionStrings": {
 
 
-    "DefaultConnection": "Server=DESKTOP-8BJBVS2\\MSSQLSERVER1;Database=Sachttcs1;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=PHAMMINH\\SQLEXPRESS01;Database=backup_Sachttcs;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
 
   },
   "BaseURL": "https://localhost:44328/",
