lịch sử thêm, xóa ảnh; mua hàng

--- a/BanSach.csproj
+++ b/BanSach.csproj
@@ -48,6 +48,7 @@
 
   <ItemGroup>
     <Folder Include="Components\Dialog\Donhang\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Views\" />
   </ItemGroup>
 
